[project]
name = "twitch-clips-scraper"
version = "0.1.0"
description = "Scrape and archive Twitch clip metadata"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["lib"]
